# sai

./: .coveragerc  .gitignore  404.html  README.md  build-env.yaml  dev-env.yaml  index.html  mkdocs.yaml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build.yaml
docs/: index.md
docs/userguide/: outlier.md  plot.md  score.md
examples/data/: 1KG.nea_den.chr9.example.both.config.yaml  1KG.nea_den.chr9.example.config.yaml  1KG.nea_den.chr9.example.den.specific.config.yaml  1KG.nea_den.chr9.example.nea.specific.config.yaml  1KG.nea_den.chr9.example.vcf.gz.tbi  1KG.nea_den.samples.txt  1KG.ref.samples.txt  1KG.tgt.samples.txt  example.ref.ind.list  example.tgt.ind.list  example.vcf
examples/results/: 1KG.nea_den.chr9.example.both.Q95.scores.tsv  1KG.nea_den.chr9.example.both.U.outliers.tsv  1KG.nea_den.chr9.example.both.U.scores.tsv  1KG.nea_den.chr9.example.both.U.vs.Q95.intersection.tsv  1KG.nea_den.chr9.example.both.U50.outliers.tsv  1KG.nea_den.chr9.example.both.U50.scores.tsv  1KG.nea_den.chr9.example.both.U50.vs.Q95.intersection.tsv  1KG.nea_den.chr9.example.both.U50.vs.Q95.overlap.tsv  1KG.nea_den.chr9.example.both.U50.vs.Q95.scores.overlap.tsv  1KG.nea_den.chr9.example.den.specific.U.scores.tsv  1KG.nea_den.chr9.example.den.specific.U50.scores.tsv  1KG.nea_den.chr9.example.nea.specific.U.scores.tsv  1KG.nea_den.chr9.example.nea.specific.U50.scores.tsv
sai/: __init__.py  __main__.py  sai.py
sai/configs/: __init__.py  global_config.py  ploidy_config.py  pop_config.py  stat_config.py
sai/generators/: __init__.py  chunk_generator.py  data_generator.py  window_generator.py
sai/multiprocessing/: __init__.py  mp_manager.py  mp_pool.py  mp_utils.py
sai/parsers/: outlier_parser.py  (+3 more)
search/: search_index.json
tests/: test___main__.py  test_sai.py
(+119 files in other folders)
