[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sai"
version = "1.0.0"
description = "A Python Package for Statistics for Adaptive Introgression"
readme = "README.md"
requires-python = "==3.9.19"
license = "GPL-3.0-or-later"
authors = [
  { name = "Xin Huang", email = "xinhuang.res@gmail.com" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "natsort==8.4.0",
  "numpy==1.26.4",
  "pandas==2.2.1",
  "pysam==0.23.0",
  "scikit-allel==1.3.7",
  "scipy==1.12.0"
]

[project.urls]
Homepage = "https://github.com/xin-huang"
Documentation = "https://github.com/xin-huang/sai"

[project.scripts]
sai = "sai.__main__:main"
