[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sai-pg"
version = "1.1.0"
description = "A Python Package for Statistics for Adaptive Introgression"
readme = "README.md"
requires-python = "==3.9.19"
license = {text = "GPLv3"}
authors = [{name = "Xin Huang", email = "xinhuang.res@gmail.com"}]
urls = {Homepage = "https://github.com/xin-huang/sai"}

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9"
]

dependencies = [
    "matplotlib==3.9.1",
    "natsort==8.4.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pysam==0.23.0",
    "scikit-allel==1.3.7",
    "scipy==1.12.0"
]

[project.scripts]
sai = "sai.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
